--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #72290d !important; /* Amarelo suave */
+    background-color: black !important; /* Amarelo suave */
     color: #000000; /* Texto preto para contraste */
 }
 
@@ -22,7 +22,7 @@ body {
     display: flex;
     flex-direction: column; /* Alinha o conteúdo verticalmente */
     background-color: #f9d71c; /* Amarelo suave */
-    border: 3px solid black !important; /* Borda preta */
+    border: 3px solid #f9d71c !important; /* Borda preta */
     border-radius: 8px; /* Borda arredondada */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Sombra para dar profundidade */
     transition: transform 0.3s ease, box-shadow 0.3s ease; /* Animações */
@@ -39,7 +39,8 @@ body {
     flex-grow: 1; /* Faz o card-body ocupar o espaço disponível */
     padding: 10px;
     background-color:  #fde910;
-    
+    border: solid 3px black;
+    border-top: solid 3px #f9d71c;
 }
 
 .card-title {
@@ -72,6 +73,45 @@ body {
     transition: 0.3s;
     transform: scale(1.05);
 }
+
+
+/* Estilo para a barra de navegação */
+.navbar {
+    background-color: #4CAF50 !important; /* Cor de fundo da barra de navegação */
+}
+
+.navbar .nav-link {
+    color: white  !important; /* Cor do texto dos links */
+    background-color: #343a40 !important;
+}
+
+.navbar .nav-link:hover {
+    color: #FFD700 !important; /* Cor do texto ao passar o mouse */
+}
+
+.navbar .navbar-brand {
+    color: white !important; /* Cor do texto da marca */
+    background-color: #343a40 !important;
+}
+
+.navbar .navbar-brand:hover {
+    color: #FFD700 !important; /* Cor do texto da marca ao passar o mouse */
+}
+
+/* Estilo para o botão de pesquisa */
+.btn-outline-success {
+    border-color: white; /* Cor da borda do botão */
+}
+
+.btn-outline-success:hover {
+    background-color: white; /* Cor de fundo ao passar o mouse */
+    color: #4CAF50; /* Cor do texto ao passar o mouse */
+}
+.container-fluid{
+    background-color: #343a40 !important;
+}
+
+
 @media (max-width: 576px) { /* Para telas pequenas */
     .carousel-item {
         display: flex;
