--- a/styles.css
+++ b/styles.css
@@ -61,11 +61,13 @@ body {
 
 
 #pedido {
-    background-color: #f8f9fa;
+    background-color: #f9d71c;
     padding: 20px;
+    border: solid rgb(207, 187, 187);
     border-radius: 8px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     max-width: 400px;
+    max-height: 350px;
     margin: auto;
 }
 .btn-primary:hover {
