--- a/styles.css
+++ b/styles.css
@@ -67,7 +67,7 @@ body {
     border-radius: 8px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     max-width: 400px;
-    max-height: 350px;
+    max-height: auto;
     margin: auto;
 }
 .btn-primary:hover {
