--- a/styles.css
+++ b/styles.css
@@ -127,6 +127,30 @@ body {
     background-color: black !important;
 }
 
+#pedido {
+    background-color: #f9d71c;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    max-width: 700px;
+    margin: auto;
+}
+
+#pedido h3 {
+    font-size: 1.5rem;
+    color: #333;
+}
+
+#lista-pedido {
+    max-height: 300px;
+    overflow-y: auto;
+}
+
+.btn-primary {
+    font-size: 1rem;
+    padding: 10px 20px;
+    color: #f9d71c !important;
+}
 
 @media (max-width: 576px) { /* Para telas pequenas */
     .carousel-item {
@@ -169,6 +193,11 @@ body {
     }
     #lista-pedido .list-group-item {
         font-size: 0.85rem;
+    }
+    .btn-primary {
+        font-size: 0.9rem;
+        padding: 8px 16px;
+        width: 100%; /* Ocupa toda a largura disponível em telas pequenas */
     }
 }
 
