--- a/styles.css
+++ b/styles.css
@@ -161,6 +161,21 @@ body {
     font-weight: bold;
 }
 
+#pedido {
+    background-color: #f9d71c;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    max-width: 800px;
+    margin: auto;
+}
+
+#lista-pedido {
+    max-height: 300px;
+    overflow-y: auto;
+    border: 1px solid #ddd;
+    padding: 10px;
+}
 @media (max-width: 576px) { /* Para telas pequenas */
     .carousel-item {
         display: flex;
