--- a/styles.css
+++ b/styles.css
@@ -17,10 +17,7 @@ body {
 
 .card {
     height: 100%; /* Deixe a altura automática para acomodar o conteúdo */
-    width: 200px; /* Ajuste a largura do card conforme necessário */
     margin: 10px; /* Centraliza o card dentro da coluna */
-    display: flex;
-    justify-content: space-between;
     flex-direction: column; /* Alinha o conteúdo verticalmente */
     background-color: #f9d71c; /* Amarelo suave */
     border: 3px solid #f9d71c !important; /* Borda preta */
@@ -36,7 +33,6 @@ body {
 .card-body {
     display: flex; /* Usar flexbox para o corpo do card */
     flex-direction: column; /* Direção vertical */
-    justify-content: space-between; /* Espalha o conteúdo */
     flex-grow: 1; /* Faz o card-body ocupar o espaço disponível */
     padding: 10px;
     background-color:  #fde910;
@@ -62,7 +58,8 @@ body {
 
 
 .card-img-top{
-    height: 150px;
+    display: flex;
+    height: 280px;
     width: 100%;
     object-fit: cover;
     border-top: solid 5px black !important;
@@ -185,6 +182,10 @@ body {
 
     .card-title {
         font-size: 0.5rem; /* Tamanho da fonte do título reduzido */
+        font-weight: bolder;
+        width: 50px;
+        display: flex;
+        justify-content: center;
     }
 
     .card-text {
@@ -196,14 +197,18 @@ body {
     }
 
     .card {
-        height: 300px; /* Deixa a altura automática para evitar sobreposição */
+        height: 250px; /* Deixa a altura automática para evitar sobreposição */
         width: 100px; /* Ocupa toda a largura disponível */
         display: flex;
         justify-content: space-between;
     }
 
+    .card-img-top{
+        height: 90px;
+    }
+
     #boti{
-        font-size: 8px;
+        font-size: 5px;
         font-weight: bolder;
         margin-top: auto;
     }
