--- a/styles.css
+++ b/styles.css
@@ -243,5 +243,10 @@ body {
         max-width: 80%;
         max-height: auto;
     }
+
+    .row{
+        margin-right: 50px !important;
+        gap: 15px;
+    }
 }
 
